<resources>
    <string name="app_name">DeudoresAppV2</string>
    <string name="tittle_list">Lista</string>
    <string name="tittle_create">Crear</string>
    <string name="tittle_read">Buscar</string>
    <string name="tittle_update">Actualizar</string>
    <string name="tittle_delete">Borrar</string>
    <string name="name_hint">Ingrese el nombre</string>
    <string name="phone_hint">Ingrese el telefono</string>
    <string name="amount_hint">Ingrese el valor de la deuda</string>
    <string name="create_button">crear</string>
    <string name="name_example">seba Gozalez</string>
    <string name="example_amount">120000</string>
    <string name="search_button">Buscar</string>
    <string name="phone_example">31287882</string>
    <string name="phone_value">Telefono: %s</string>
    <string name="amount_value">Deuda: $%s</string>
    <string name="delete_button">Borrar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="update_botton">Buscar</string>
    <string name="login">Iniciar sesion</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo electronico</string>
    <string name="question_account">¿No tienes cuenta?</string>
    <string name="sign_up">Registrese</string>
    <string name="form">Formulario</string>
    <string name="required_field">Campo requerido</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="repeat_password">Repita contraseña</string>
    <string name="Register">Registrar</string>
    <string name="password_error">La contraseña debe tener minimo 6 digitos</string>
    <string name="password_errors">Las contraseñas son invalidas</string>
    <string name="name_error">Ingrese un nombre</string>
    <string name="last_name_error">Ingrese un apellido</string>
    <string name="email_error">Correo electrónico invalido</string>
    <string name="coincidence_error">Las contraseñas no coinciden</string>
    <string name="login_error">Correo electronico y/o contraseña invalidos</string>
    <string name="unregistered_user">No hay registrados usuarios con ese correo</string>
    <string name="nonexistent_user">No existe usuarios con ese nombre</string>
    <string name="registered_used">Ya existe un usuario con ese correo</string>
</resources>