<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_list_24dp"
        android:title="@string/tittle_list" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_create_24dp"
        android:title="@string/tittle_create" />

    <item
        android:id="@+id/navigation_read"
        android:icon="@drawable/ic_read_24dp"
        android:title="@string/tittle_read" />

    <item
        android:id="@+id/navigation_update"
        android:icon="@drawable/ic_update_24dp"
        android:title="@string/tittle_update" />

    <item
        android:id="@+id/navigation_delete"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/tittle_delete" />
</menu>