<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.sgh21.deudoresappv2.ui.list.ListFragment"
        android:label="@string/tittle_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_list_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.sgh21.deudoresappv2.ui.create.CreateFragment"
        android:label="@string/tittle_create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/navigation_read"
        android:name="com.sgh21.deudoresappv2.ui.read.ReadFragment"
        android:label="@string/tittle_read"
        tools:layout="@layout/fragment_read" />
    <fragment
        android:id="@+id/navigation_update"
        android:name="com.sgh21.deudoresappv2.ui.update.UpdateFragment"
        android:label="@string/tittle_update"
        tools:layout="@layout/fragment_update" />
    <fragment
        android:id="@+id/navigation_delete"
        android:name="com.sgh21.deudoresappv2.ui.delete.DeleteFragment"
        android:label="@string/tittle_delete"
        tools:layout="@layout/fragment_delete" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.sgh21.deudoresappv2.ui.Detail.DetailFragment"
        android:label="@string/tittle_list"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="debtor"
            app:argType="com.sgh21.deudoresappv2.data.entities.Deudor" />
    </fragment>
</navigation>